tests/errors/sem_assignment_int.kt
fun main() {
    val x: Int = 5
    val y: Double = x
}
